Fix notification icon alignment

--- a/ODK.Web.Razor/wwwroot/css/_notifications.scss
+++ b/ODK.Web.Razor/wwwroot/css/_notifications.scss
@@ -24,6 +24,7 @@
         padding-right: var(--odk-notification-item-padding-x);
         align-self: stretch;
         display: flex;
+        align-items: center;
     }
 
     .notification-icon {
