--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12497,6 +12497,7 @@ html[data-platform=odk] {
   padding-right: var(--odk-notification-item-padding-x);
   align-self: stretch;
   display: flex;
+  align-items: center;
 }
 .notification-item .notification-icon {
   align-self: center;
