--- a/ODK.Web.Razor/wwwroot/css/odk.css
+++ b/ODK.Web.Razor/wwwroot/css/odk.css
@@ -12504,6 +12504,7 @@ html[data-platform=odk] {
   padding-right: var(--odk-notification-item-padding-x);
   align-self: stretch;
   display: flex;
+  align-items: center;
 }
 .notification-item .notification-icon {
   align-self: center;
